Spacing fix for the buttons.

--- a/src/assets/styles/_filter-drawer.scss
+++ b/src/assets/styles/_filter-drawer.scss
@@ -4,7 +4,8 @@ $block-class: 'filter-drawer';
 
 @at-root {
     .#{$block-class} {
-        padding: 0 2.5rem;
+        padding: 0 2rem;
+        min-width: 21rem;
 
         &__title-panel {
             justify-content: space-between;
